# DataCollecter

./: BGR_sample.cpp  CMakeLists.txt  CMakeLists.txt~  IMUpreprocess.cpp  IR_sample.cpp  README.md  Realsense_test.kdev4  camera-information  camera-information~  dataset.cpp  example.hpp  readme.md  readme.md~
.kdev4/: Realsense_test.kdev4
build1/: CMakeCache.txt  Makefile  cmake_install.cmake  dataset
main/: cpp-enumerate-devices.cpp  dataset.cpp
